module8homework-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: httpserver
